--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -18,6 +18,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore net
     - name: Build
-      run: dotnet build -c Release --no-restore net
+      run: dotnet build -c Release --no-restore
     - name: Test
-      run: dotnet test -c Release --no-build --verbosity normal net
+      run: dotnet test -c Release --no-build --verbosity normal
