--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -16,7 +16,7 @@ jobs:
       with:
         dotnet-version: 6
     - name: Restore dependencies
-      run: dotnet restore net
+      run: dotnet restore
     - name: Build
       run: dotnet build -c Release --no-restore
     - name: Test
