--- a/.github/workflows/dotnet-cd.yml
+++ b/.github/workflows/dotnet-cd.yml
@@ -34,7 +34,7 @@ jobs:
       url: https://lab5mwo.azurewebsites.net
     steps:
       - name: Download artifact
-        uses: actions/download-artifact@3.0.0
+        uses: actions/download-artifact@v3
         with:
           name: lab5mwo
       - name: Upload to azure
