--- a/.github/workflows/dotnet-cd.yml
+++ b/.github/workflows/dotnet-cd.yml
@@ -25,7 +25,7 @@ jobs:
       uses: actions/upload-artifact@v3.1.0
       with:
         name: lab5mwo
-        path: /app
+        path: ${{env.DOTNET_ROOT}}
   deploy-dev:
     runs-on: ubuntu-latest
     needs: build
