--- a/.github/workflows/dotnet-cd.yml
+++ b/.github/workflows/dotnet-cd.yml
@@ -20,12 +20,12 @@ jobs:
     - name: Build
       run: dotnet build -c Release --no-restore
     - name: Publish
-      run: dotnet publish --no-build -c Release -o ${{env.DOTNET_ROOT}}
+      run: dotnet publish --no-build -c Release -o ${{env.DOTNET_ROOT}}/api
     - name: Upload artifact
       uses: actions/upload-artifact@v3.1.0
       with:
         name: lab5mwo
-        path: ${{env.DOTNET_ROOT}}
+        path: ${{env.DOTNET_ROOT}}/api
   deploy-dev:
     runs-on: ubuntu-latest
     needs: build
